<resources>
    <string name="app_name">GroupUp © 2025 – All rights reserved.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="log_out">Log Out</string>
    <string name="view_all_classrooms">View all Classrooms</string>
    <string name="create_another_admin">Create another Admin</string>
    <string name="view_your_classrooms">View your Classrooms</string>
    <string name="create_a_new_classroom">Create a new Classroom</string>
    <string name="join_a_classroom">Join a Classroom</string>

    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="sign_up_top_text">Sign Up As A:</string>
    <string name="roleDisplay" />
    <string name="enter_your_new_username">Enter your new username</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="edit_the_max_group_size">Edit the max group size</string>
    <string name="enter_new_admin_user">Enter new Admin User</string>
    <string name="enter_new_admin_password">Enter new Admin password</string>
    <string name="add">Add</string>
    <string name="all_classes">All Classes</string>
    <string name="go_back">Go Back</string>
    <string name="enter_class_id">Enter Class ID</string>

    <string name="enter_class_id_here">Enter Class ID Here</string>
    <string name="add_me">Add Me</string>
    <string name="back">Go Back</string>
    <string name="welcome_to_groupup">Welcome to GroupUp</string>
    <string name="modify_preferences_for_class_name">Modify Preferences For {Class Name}</string>
    <string name="preferred">Preferred:</string>
    <string name="enter_student_id_here">enter student id</string>
    <string name="enter">Enter!</string>
    <string name="avoid">Avoid:</string>
    <string name="enter_student_id">enter student id</string>
    <string name="enter_">Enter!</string>
    <string name="back_">Go Back</string>
    <string name="welcomeCreateClasss">Welcome!</string>
    <string name="what_is_your_class_subject">What is your class subject?</string>
    <string name="please_enter_your_subject">Please enter your subject</string>
    <string name="create_your_class">Create your class</string>
    <string name="go_back_to_main">Go back</string>
    <string name="current_group_size_is_4">Current Group size is 4</string>
    <string name="enter_the_new_max">Enter the new max</string>
    <string name="update">Update</string>


</resources>