<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="326dp"
        android:layout_height="83dp"
        android:paddingStart="55dp"
        android:text="@string/welcome"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewAllClasses"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:text="@string/view_all_classrooms"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/createAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/createAdmin"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:text="@string/create_another_admin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/viewClasses"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:text="@string/view_your_classrooms"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/createAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <Button
        android:id="@+id/createNewClassroom"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:text="@string/create_a_new_classroom"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible" />

    <Button
        android:id="@+id/viewEnrolledClasses"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:text="@string/view_your_classrooms"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/createAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <Button
        android:id="@+id/joinClassroom"
        android:layout_width="200dip"
        android:layout_height="100dip"
        android:text="@string/join_a_classroom"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>