<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateClassActivity">

    <TextView
        android:id="@+id/TopWelcome"
        android:layout_width="250dip"
        android:layout_height="75dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="82dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/welcomeCreateClasss"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SubjectQuestion"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/what_is_your_class_subject"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopWelcome" />

    <EditText
        android:id="@+id/SubjectEditText"
        android:layout_width="300dip"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="Enter a subject"
        android:gravity="center"
        android:hint="@string/please_enter_your_subject"
        android:inputType="textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SubjectQuestion">
    </EditText>

    <Button
        android:textColor="#009688"
        android:id="@+id/CreateClassButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        android:text="@string/create_your_class"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SubjectEditText"
        >
    </Button>
    <Button
        android:id="@+id/GoBackToMainActivity"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        android:text="@string/go_back_to_main"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CreateClassButton"
        >
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>