<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fce5cd">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/current_group_size_is_4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newMax"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="136dp"
        android:autofillHints="Max Number of Groups"
        android:gravity="center"
        android:hint="@string/enter_the_new_max"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <Button
        android:id="@+id/confirmNewMaxButton"
        android:layout_width="177dp"
        android:layout_height="75dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="#f9a54e"
        android:outlineSpotShadowColor="@color/black"
        android:text="@string/update"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent    "
        app:layout_constraintTop_toBottomOf="@id/newMax"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="126dp"
        android:layout_height="44dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="16dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>