<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleAllClasses"
        android:layout_width="361dp"
        android:layout_height="110dp"
        android:layout_margin="16dip"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/all_classes"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="387dp"
        android:layout_height="616dp"
        android:text="@string/teacher"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/titleAllClasses"
        tools:layout_editor_absoluteX="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/list_class"
        />

    <Button
        android:layout_width="126dp"
        android:layout_height="44dp"
        android:layout_marginEnd="248dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_class"
        app:layout_constraintVertical_bias="0.238"
        android:id="@+id/backButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>