<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinAClassActivity">

    <TextView
        android:id="@+id/titleJoinAClassTextView"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_margin="16dip"
        android:layout_marginTop="256dp"
        android:gravity="center"
        android:text="@string/enter_class_id"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/joinClassroomClassIDInputEditText"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_margin="16dip"
        android:gravity="center"
        android:hint="@string/enter_class_id_here"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleJoinAClassTextView" />

    <Button
        android:id="@+id/joinAClassAddButton"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_me"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinClassroomClassIDInputEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>