<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fce5cd"
    tools:context=".StudentPreferencesActivity">

    <TextView
        android:id="@+id/titleModifyPrefsTextView"
        android:layout_width="383dp"
        android:layout_height="107dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/modify_preferences_for_class_name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/preferredStudentCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#f9a54e"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/titleModifyPrefsTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/preferredStudentTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/preferred"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/preferredStudentEditText"
                app:layout_constraintHorizontal_bias="0.078"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.529" />

            <EditText
                android:id="@+id/preferredStudentEditText"
                android:layout_width="170dp"
                android:gravity="center"
                android:layout_height="48dp"
                android:layout_marginEnd="100dp"
                android:inputType="number"
                android:backgroundTint="#ffd966"
                android:hint="@string/enter_student_id_here"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/preferredStudentEnterButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:backgroundTint="#a2c4c9"
                android:text="@string/enter"
                app:layout_constraintStart_toEndOf="@id/preferredStudentEditText"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/avoidStudentCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#f9a54e"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/preferredStudentCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/avoidStudentTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/avoid"
                android:textSize="20sp"
                android:gravity="right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/avoidStudentEditText"
                app:layout_constraintHorizontal_bias="0.078"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.529" />

            <EditText
                android:id="@+id/avoidStudentEditText"
                android:layout_width="170dp"
                android:gravity="center"
                android:layout_height="48dp"
                android:layout_marginEnd="100dp"
                android:inputType="number"
                android:backgroundTint="#ffd966"
                android:hint="@string/enter_student_id"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/avoidStudentEnterButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:backgroundTint="#a2c4c9"
                android:text="@string/enter_"
                app:layout_constraintStart_toEndOf="@id/avoidStudentEditText"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/goBackStudentLandingPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#adadad"
        android:text="@string/back_"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avoidStudentCardView"
        app:layout_constraintVertical_bias="0.907" />


</androidx.constraintlayout.widget.ConstraintLayout>